button feature added

--- a/basic.html
+++ b/basic.html
@@ -13,6 +13,6 @@
     <h5>hello this is Sai Ram Sai Ram</h5>
     <h6>hello this is Krishna Krishna Hare Hare</h6>
     <p>hello Reshma</p>
-    <p>
+    <p><button>submit</button>
 </body>
 </html>
