--- a/Login.html
+++ b/Login.html
@@ -3,20 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login</title>
 </head>
-<body>
-    <body>
-    <h2>Login</h2>
-    <form action="home.html">
-   <label for="">Email</label>
-   <input type="text"><br>
-   <label for="">Password:</label> 
-   <input type="password"><br>
-   <input type="submit"value="submit">
-   <p>New User?
-    <a href="home.html">Home</a>
-   </p>
-   </form>
+<body style="background-color:blanchedalmond">
+    <pre>
+
+
+
+
+
+    </pre>    
+    <form action="apply.html" target="_self">
+    <center>
+        <img src="./login.png" width="100" height="100">
+        <p>
+           <label>Enter your Email</label>
+           <input type="email" placeholder="Email" required>
+        </p>
+        <p>
+           <label>Enter password</label>
+           <input type="password" placeholder="Password" required>
+        </p>
+    </center>
+
+
+    <center>
+        <button>Submit</button>
+    </center>
+    </form>
 </body>
 </html>
