--- a/BootStrap.html/paytm_navbar.html
+++ b/BootStrap.html/paytm_navbar.html
@@ -1,38 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=\, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Document</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
- <style>
-    /* .signin-btn {
-      display: inline-flex;
-      align-items: center;
-      gap: 10px;
-      background: #002970;
-      color: white;
-    }
+    <style>
+      /* Show dropdown on hover */
+.navbar .dropdown:hover .dropdown-menu {
+    display: block;
+    margin-top: 0; /* remove gap */
+}
 
-   
-    .signin-icon {
-      width: 36px;
-      height: 36px;
-      border-radius: 50%;
-      background: #00BAF2;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    } */
-  </style>
-
+/* Optional: smooth effect */
+.dropdown-menu {
+    transition: all 0.3s ease;
+}
+        .sign-in{
+            background-color: #002970;
+            /* color: white; */
+            border: 2px solid black;
+            border-radius: 999px ;
+            
+        }
+        .sign-in a{
+            color: white !important;
+        }
+        .sign-in i{
+            color: #00BAF2;
+        }
+    </style>
 </head>
 <body>
-    <!-- <div class="container">
-        <div class="row">
-            <div class="col"> -->
-                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
         <img src="https://pwebassets.paytm.com/commonwebassets/paytmweb/header/images/logo_new.svg" alt="">
@@ -44,8 +46,8 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <!-- <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
+        </li> -->
+        <!-- <li class="nav-item">
           <a class="nav-link" href="#">Link</a>
         </li> -->
         <li class="nav-item dropdown">
@@ -86,7 +88,7 @@
 
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Payment for Business
+            Payments & Services
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" href="#">Action</a></li>
@@ -107,11 +109,16 @@
             <li><a class="dropdown-item" href="#">Something else here</a></li>
           </ul>
         </li>
-<li class="nav-item">
-          <a class="nav-link" href="#"><i class="fa-solid fa-download"></i>Download App</a>
+        <li class="nav-item">   
+          <a class="nav-link" href=""><i class="fa-solid fa-download"></i>Download App</a>
         </li>
+        <li class="nav-item sign-in">   
+          <a class="nav-link" href=""><i class="fa-solid fa-circle-user" ></i>Sign in</a>
+        </li>
+        <!-- <li class="nav-item">
+          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+        </li> -->
       </ul>
-  </a>
       <!-- <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
@@ -119,13 +126,6 @@
     </div>
   </div>
 </nav>
-
-            <!-- </div>
-
-        </div>
-
-    </div> -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
 </body>
 </html>
